--- a/gallery.html
+++ b/gallery.html
@@ -21,17 +21,17 @@
             <p>Great memories shared with amazing friends. This section features some wonderful moments spent together!</p>
         </div>
         <div class="gallery-container">
-            <div class="gallery-item" data-phrase="mazsop">
-                <img src="mazsop.jpg" alt="mazsop">
+            <div class="gallery-item">
+                <img src="mazsop.jpg" alt="Mazsop with friends">
             </div>
-            <div class="gallery-item" data-phrase="malcap">
-                <img src="malcap.jpg" alt="malcap">
+            <div class="gallery-item">
+                <img src="malcap.jpg" alt="Malcap during an event">
             </div>
-            <div class="gallery-item" data-phrase="marqis">
-                <img src="marqis.jpg" alt="marqis">
+            <div class="gallery-item">
+                <img src="marqis.jpg" alt="Marqis enjoying the party">
             </div>
-            <div class="gallery-item" data-phrase="donknow">
-                <img src="donknow.jpg" alt="donknow">
+            <div class="gallery-item">
+                <img src="donknow.jpg" alt="Random fun moments">
             </div>
         </div>
     </section>
@@ -43,17 +43,17 @@
             <p>During my internship, I learned a lot and gained valuable skills. These photos showcase my journey through the internship process.</p>
         </div>
         <div class="gallery-container">
-            <div class="gallery-item" data-phrase="Teamwork.">
-                <img src="tyqa.jpg" alt="meeting">
+            <div class="gallery-item">
+                <img src="tyqa.jpg" alt="Teamwork moments during the internship">
             </div>
-            <div class="gallery-item" data-phrase="Teamwork.">
-                <img src="mssd.jpg" alt="Mssd">
+            <div class="gallery-item">
+                <img src="mssd.jpg" alt="MSSD event">
             </div>
-            <div class="gallery-item" data-phrase="bonding.">
-                <img src="badminton.jpg" alt="badminton">
+            <div class="gallery-item">
+                <img src="badminton.jpg" alt="Bonding through badminton">
             </div>
-            <div class="gallery-item" data-phrase="last day.">
-                <img src="last day.jpg" alt="last day">
+            <div class="gallery-item">
+                <img src="last day.jpg" alt="Last day of internship">
             </div>
         </div>
     </section>
@@ -65,17 +65,17 @@
             <p>Journey of mine for diploma at Uitm Segamat.</p>
         </div>
         <div class="gallery-container">
-            <div class="gallery-item" data-phrase="Sem 3.">
-                <img src="uitm code.jpg" alt="code">
+            <div class="gallery-item">
+                <img src="uitm code.jpg" alt="Coding activity in semester 3">
             </div>
-            <div class="gallery-item" data-phrase="Raya.">
-                <img src="uitm raya.jpg" alt="raya">
+            <div class="gallery-item">
+                <img src="uitm raya.jpg" alt="Celebrating Raya at UiTM">
             </div>
-            <div class="gallery-item" data-phrase="Canva.">
-                <img src="uitm canva.jpg" alt="canva">
+            <div class="gallery-item">
+                <img src="uitm canva.jpg" alt="Designing with Canva">
             </div>
-            <div class="gallery-item" data-phrase="biro.">
-                <img src="biro makanan.jpg" alt="biro">
+            <div class="gallery-item">
+                <img src="biro makanan.jpg" alt="Biro makanan activities">
             </div>
         </div>
     </section>
