--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
     <div class="homepage-content">
         <div class="homepage-picture">
-        <img src="C:\Users\user\Downloads\wbste/qilaaa.jpg" alt="Profile Picture">
+        <img src="qilaaa.jpg" alt="Profile Picture">
     </div>
 
     <div class="audio-container">
     <audio controls autoplay>
-    <source src="C:\Users\user\Downloads\wbste/trip audio.mp3" type="audio/mpeg">
+    <source src="trip audio.mp3" type="audio/mpeg">
     <source src="trip audio.ogg" type="audio/ogg">
           Your browser does not support the audio element.
           </audio>
