--- a/education.html
+++ b/education.html
@@ -33,7 +33,7 @@
     <div class="content">
         <h2>Education</h2>
         <div class="education-section">
-            <img src="C:\Users\user\Downloads\wbste/logo sk.jpeg" alt="Primary Education" class="animated">
+            <img src="logo sk.jpeg" alt="Primary Education" class="animated">
             <div>
                 <h3>Primary Education</h3>
                 <p>I have been learning at SK Pekan Nanas for my primary education where I have been going for 6 years.
@@ -48,7 +48,7 @@
         </div>
 
         <div class="education-section">
-            <img src="C:\Users\user\Downloads\wbste/logo smk.jpeg" alt="Secondary Education" class="animated">
+            <img src="logo smk.jpeg" alt="Secondary Education" class="animated">
             <div>
                 <h3>Secondary Education</h3>
                 <p>I have been learning at SMK Pekan Nanas for my secondary education where I have been going for 2 years.
@@ -63,7 +63,7 @@
         </div>
 
         <div class="education-section">
-            <img src="C:\Users\user\Downloads\wbste/uitm real.png" alt="University" class="animated">
+            <img src="uitm real.png" alt="University" class="animated">
             <div>
                 <h3>University</h3>
                 <p>For my diploma journey, I have chosen Information Management for my diploma course. I have been learning at Uitm
