--- a/about.html
+++ b/about.html
@@ -16,6 +16,11 @@
 
     <div class="content">
         <h2>About Me</h2>
+        <video width="320" height="240" autoplay>
+        <source src="taktahulah.mp4" type="video/mp4">
+        <source src="movie.ogg" type="video/ogg">
+</video><br>
+
         <table>
             <tr>
                 <th>Field</th>
