--- a/about.html
+++ b/about.html
@@ -16,10 +16,14 @@
 
     <div class="content">
         <h2>About Me</h2>
-        <video width="320" height="240" autoplay>
-        <source src="taktahulah.mp4" type="video/mp4">
-        <source src="movie.ogg" type="video/ogg">
-</video><br>
+
+        <!-- Centered Video with Border -->
+        <div class="video-container">
+            <video width="320" height="240" autoplay>
+                <source src="taktahulah.mp4" type="video/mp4">
+                <source src="movie.ogg" type="video/ogg">
+            </video>
+        </div><br>
 
         <table>
             <tr>
@@ -85,6 +89,7 @@
                 <img src="hanging.jpg" alt="Hanging Out">
                 <div class="caption">Hanging Out</div>
             </div>
+        </div>
     </div>
 </body>
 </html>
