--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="header">
-        <h1>Welcome to My Profile</h1>
+        <h1>Welcome to Aqilah's Profile</h1>
     </div>
 
     <div class="homepage-content">
