--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="header">
-        <h1>Aqilah's Profile   <font style="font-size: 350%;", color = "FA9BCF", face = "TIMES NEW ROMAN"></h1>
+        <h1>Aqilah's Profile  </h1>
     <div class="homepage-content">
         <div class="homepage-picture">
         <img src="qilaaa.jpg" alt="Profile Picture">
